impl basic video controller logic

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@egoist/tailwindcss-icons": "^1.7.4",
+    "@iconify-json/lucide": "^1.1.183",
+    "@iconify-json/mdi": "^1.1.66",
+    "@iconify/json": "^2.2.202",
     "@types/axios": "^0.14.0",
     "@types/hls.js": "^1.0.0",
     "@types/node": "^20",
