--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev_local_net": "next dev --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "hls.js": "^1.5.8",
+    "mpegts.js": "^1.7.3",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
