--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "hls.js": "^1.5.8",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.7.4",
