--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "hls.js": "^1.5.8",
+    "leveldown": "^6.1.1",
+    "levelup": "^5.1.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
