--- a/recorder/package.json
+++ b/recorder/package.json
@@ -9,8 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "leveldown": "^6.1.1",
-    "levelup": "^5.1.1",
+    "libtelekichi": "file:../libtelekichi",
     "node-cron": "^3.0.3"
   },
   "type": "module"
